[package]
name = "certinfo"
version = "0.1.3"
edition = "2021"

[lib]
name = "certinfo"
# This is crucial for building a Python extension
crate-type = ["cdylib"]
path = "rust_certinfo/src/lib.rs"

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38"] }
x509-parser = "0.16.0"
base64 = "0.22"