[project]
name = "certmonitor"
version = "0.1.1"
description = "A simple package to parse certificates"
authors = [
    { name = "Brad Haas", email = "bradh11@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.14"

dependencies = []
# No runtime dependencies; standard library only

[dependency-groups]
dev = [
    "ruff>=0.5.2",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "maturin>=1.8.4",
]

docs = [

    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.18",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-mermaid2-plugin",
]

[tool.maturin]
module-name = "certmonitor.certinfo"
# python-source = "certmonitor"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
