[project]
name = "certmonitor"
version = "0.1.3"
description = "A simple package to parse certificates"
authors = [
    { name = "Brad Haas", email = "bradh11@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.14"

dependencies = []
# No runtime dependencies; standard library only

[dependency-groups]
dev = [
    "ruff>=0.5.2",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "maturin>=1.8.4",
    "mypy>=1.0.0",
    "bandit>=1.7.10",
]

docs = [

    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.18",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-mermaid2-plugin",
]

[tool.maturin]
module-name = "certmonitor.certinfo"
# python-source = "certmonitor"
features = ["pyo3/extension-module"]

[tool.mypy]
# MyPy configuration for CertMonitor
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Allow some flexibility for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore missing stubs for third-party packages
[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "maturin.*",
]
ignore_missing_imports = true

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
